--- a/css/csii_gallery.css
+++ b/css/csii_gallery.css
@@ -96,6 +96,9 @@ div.container{
 	div.col-4 img{
 		height: 18em !important; 
 	}
+	.navbar-brand{
+		width: 50% !important;
+	}
 }
 /*Gallery*/
 div.col-4{
